WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260689
[Win][Clang] dfg/DFGOperations.cpp(1471,29): warning: unknown attribute 'forceinline' ignored
https://bugs.webkit.org/show_bug.cgi?id=260689
Summary
[Win][Clang] dfg/DFGOperations.cpp(1471,29): warning: unknown attribute 'forc...
Fujii Hironori
Reported
2023-08-24 18:12:14 PDT
[Win][Clang] dfg/DFGOperations.cpp(1471,29): warning: unknown attribute 'forceinline' ignored clang-cl reports the following warnings for Windows port Release builds after
267176@main
. S:\wwbb\work\build\Source\JavaScriptCore\dfg/DFGOperations.cpp(1471,29): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes] S:\wwbb\work\build\Source\JavaScriptCore\dfg/DFGOperations.cpp(1478,24): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes] S:\wwbb\work\build\Source\JavaScriptCore\runtime\RegExpObjectInlines.h(165,26): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes] S:\wwbb\work\build\Source\JavaScriptCore\runtime/RegExpObject.cpp(189,29): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes] S:\wwbb\work\build\Source\JavaScriptCore\runtime/RegExpObject.cpp(196,24): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes] S:\wwbb\work\build\Source\JavaScriptCore\runtime/RegExpObjectInlines.h(165,26): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes]
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-08-30 14:53:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17249
EWS
Comment 2
2023-08-30 16:20:31 PDT
Committed
267471@main
(2f546b2749a1): <
https://commits.webkit.org/267471@main
> Reviewed commits have been landed. Closing PR #17249 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-08-30 16:21:17 PDT
<
rdar://problem/114730320
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug