REGRESSION(267176@main): [Win][Clang] Unreviewed build fix for ALWAYS_INLINE_LAMBDA https://bugs.webkit.org/show_bug.cgi?id=260689

After 267176@main added ALWAYS_INLINE_LAMBDA macro, clang-cl reported
the following warning for Windows port release builds:

> dfg/DFGOperations.cpp(1471,29): warning: unknown attribute 'forceinline' ignored [-Wunknown-attributes]

* Source/WTF/wtf/Compiler.h:
Clang-cl should take the same ALWAYS_INLINE_LAMBDA macro definition with GCC.

Canonical link: https://commits.webkit.org/267471@main